--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
-		"firebase": "^7.21.1",
+		"firebase": "^7.22.0",
 		"framer-motion": "^2.7.5",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-icons": "^3.11.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
+		"react-scroll": "^1.8.1",
 		"styled-components": "^5.2.0"
 	},
 	"scripts": {
